--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "postinstall": "npx prisma generate",
+    "start": "prisma generate && node server.js",
     "server": "nodemon server.js"
   },
   "keywords": [],
@@ -14,11 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@clerk/express": "^1.7.65",
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-neon": "^7.3.0",
+    "@prisma/client": "^6.19.2",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prisma": "^6.19.2"
   }
 }
