--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "inngest": "^3.49.3",
     "ws": "^8.19.0"
   },
   "devDependencies": {
